cambio estilos blogpost

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,17 @@
 h1{
-    color: brown;
-    font-weight: 700;
+    font-weight: 800;
+    font-size: 4rem
 ;
 }
 
 p{
-    color: cadetblue;
     font-weight: 500;
+    font-size: 2em;
+}
+
+.post{
+    text-align: center;
+    margin: 4em;
+    border: solid 2px black;
+    padding: 4em;
 }
