--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,7 +11,16 @@ p{
 
 .container{
     text-align: center;
-    margin: 4em auto;
+    margin: 4em auto ;
     border: solid 2px black;
-    padding: 4em;
+    padding: 0 0 4em 0;
+}
+
+header{
+    background-color: darkblue;
+    color: white;
+    margin: 0 0 2em 0;
+    padding: 0.5em;
+    font-weight: bold;
+    box-shadow:7px 12px 22px 0px rgba(0,0,0,0.6)
 }
