--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,7 +4,8 @@ h1{
 ;
 }
 
-p{
+.post p{
+    color: red;
     font-weight: 500;
     font-size: 2em;
 }
@@ -19,6 +20,7 @@ p{
 header{
     background-color: darkblue;
     color: white;
+    font-size: 2em;
     margin: 0 0 2em 0;
     padding: 0.5em;
     font-weight: bold;
