--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,7 +4,7 @@ h1{
 ;
 }
 
-p{
+.post p{
     font-weight: 500;
     font-size: 2em;
 }
@@ -18,7 +18,8 @@ p{
 
 header{
     background-color: darkblue;
-    color: white;
+    color: red;
+    font-size: large;
     margin: 0 0 2em 0;
     padding: 0.5em;
     font-weight: bold;
